--- a/main.css
+++ b/main.css
@@ -12,8 +12,12 @@ a {
     color: black;
 }
 
-a:hover {
-    text-decoration: underline; /*마우스 커서 올라갈 시 밑줄*/
+p {
+    float: left;
+}
+
+img {
+    height: 20px
 }
 
 header {
@@ -29,13 +33,15 @@ header {
     position:absolute;
     right: 0;
     top: 0;
-    font-size: 13px;
+    font-size: 12px;
+    text-align: right;
     margin-left: 5px;
+    margin-top: 15px;
 }
 
 .main_logo {   /*메인로고이미지*/
     margin-top: 30px;
-    margin-bottom: 10px;
+    margin-bottom: 30px;
     width: 225px;
     height: 55px;
 }
@@ -47,13 +53,18 @@ fieldset {
 .main {
     display:flex;
     justify-content: center;
-
 }
+
 
 .serch {
     width: 520px;
     height: 50px;
     border: 2px solid #03cf5d;
+    display: flex;
+    align-items: center;
+}
+
+.serch_div {
     display: flex;
     align-items: center;
 }
