--- a/main.css
+++ b/main.css
@@ -23,7 +23,7 @@ img {
 header {
     margin: auto;
     width: 1160px;
-    height: 215px;
+    height: 160px;
     display: flex;
     align-items: cneter;  /*하위 요소들 수직 가운데정렬 */
     position: relative;
@@ -99,9 +99,38 @@ fieldset {
     color: #ffffff;
 }
 
-header > nav {
+/*header > nav {
     width: 100;
     height: 45px;
     position: absolute;
     bottom: 0;
 }
+
+/*nav*/
+
+nav {
+    height: 46px;
+    border-top: 1px solid #f1f3f6;
+    border-bottom: 1px solid #d1d8e4;
+} /*흰색선*/
+
+.nav_ul {
+    height: 46px;
+    margin-left: 160px;
+    display:flex;
+    align-items: center;
+}
+
+.nav_ul ul {
+    display:block;
+}
+
+.nav_ul ul > li {
+    display: inline-block;
+    margin-left: 8px;
+    font-size: 15px;
+}
+
+
+
+
