--- a/main.css
+++ b/main.css
@@ -239,8 +239,34 @@ main {
     float:right;
     font-size:12px;
 }
-#na_hel ul > li {
-    width: 750px;
+.na_hel {
+    width: 730px;
+    height: 49px;
+} 
+#na_hel_ul {
+    padding-left: 0px;
+    width: 100%;
+    height: 100%;
+}
+#na_hel_ul > li {
+    float: left;
+    padding: 15px 30px;
+    border: 1px solid #dae1e6;
+    font-size: 13px; 
+    font-weight: bold;
+}
+#na_hel_ul > li:nth-child(5n){
+    background-color:rgb(123, 211, 88);
+}
+#na_hel_ul > li:nth-child(n+2) {
+    border-left: 0;    /*테두리 겹치는거 수정*/
+}
+#na_hel_ul > li > a:hover {
+    color: rgb(221, 54, 143);
+}
+.naver_hel img { 
+    border: none; margin: 0; padding: 0; display: inline; 
+    margin-right:-6px;
 }
 
 /*footer*/
