--- a/main.css
+++ b/main.css
@@ -112,7 +112,7 @@ nav {
 .nav_ul ul > li > a > img {
    width: 44px;
    margin-right: 10px;
-   position: relative;  /* 해당 요소가 배치되어야 할 곳을 기준으로 상하좌우로 지정한 값 만큼 떨어진다. */
+   position: relative;    /* 해당 요소가 배치되어야 할 곳을 기준으로 상하좌우로 지정한 값 만큼 떨어진다. */
    top: 5px;
    left: 4px;
    transform: scale(1.4);
@@ -389,25 +389,28 @@ main {
 }
 .login {
     margin-top: 20px;
-    padding: 10px 15px 0px 15px;
+    height: 130px;
+    padding: 10px 15px 7px 15px;
     background-color: #f7f9fa;
     border: 1px solid #dae1e6;
     font-size:12px;
 }
+.login p {
+    margin-top: 7px;
+    margin-bottom: 7px;
+}
 .login_image {
     padding-top: 10px;
-    padding-bottom:10px;
 }
 .login_image a > img {
     width: 300px;
 }
 .list_ul4 {
     padding-left: 0px;
-    margin-top: 5px;
+    margin-top: 10px;
+    margin-bottom: 7px;
 }
-.list_ul4 a{
-    margin-left: 10px;
-}
+
 .list_ul4 li a:link,
 .list_ul4 li a:visited{
     font-size: 13px;
@@ -419,6 +422,38 @@ main {
 .create {
     float: right;
     margin-right: 17px;
+}
+.issue {
+    margin-top: 15px;
+    height: 49px;
+    background-color: white;
+    border: 1px solid #dae1e6;
+    font-size: 13px;
+}
+.issue img {
+    height: 25px;
+    width: 35px;
+    margin-left: 20px;
+    margin-top: 10px;
+    float: left;
+}
+.issue p {
+    margin-left: 7px;
+    margin-top: 17px;
+}
+.card_li2 {
+    float: right; 
+    border: 1px solid #dae1e6;
+    margin-top: 10px;
+    width: 25px;
+    height: 25px;
+}
+.card_li2 i {
+    margin-left: 7px;
+    margin-top: 5px;
+}
+#card_li2-1 {
+    margin-right: 20px;
 }
 /*footer*/
 .f1 {
