--- a/main.css
+++ b/main.css
@@ -559,7 +559,7 @@ main {
     padding-left: 0;
     margin-right: 0;
     margin-left: 10px;
-    height: 300px;
+    height: 330px;
     width: 350px;
 }
 .shopping_li2 a > img {
@@ -590,6 +590,27 @@ main {
     font-size: 12px;
     margin-left: 5px;
     margin-bottom: 23px;
+}
+.shop_bottom1 {
+    height: 40px;
+    margin: 10px 10px 10px 10px;
+    border: 1px solid #dae1e6;
+    background-color: #f7f7f7;
+}
+.shop_bottom1 a{
+    float: left;
+    margin-top: 7px;
+    margin-left: 16px;
+}
+.shop_bottom1 p {
+    margin: 7px 0 0 5px;
+    font-size: 12px; 
+    color: #777; 
+}
+.shop_bottom1 i {
+    margin-left: 70px;
+    font-size: 11px;
+    color:rgb(83, 81, 81);
 }
 /*footer*/
 .f1 {
