--- a/main.css
+++ b/main.css
@@ -611,9 +611,28 @@ main {
     margin-left: 70px;
     font-size: 11px;
     color:rgb(83, 81, 81);
+    border: 1px solid #dae1e6;
 }
 .shop_bottom2{
-    height: 40px;
+    height: 55px;
+    border-bottom: 1px solid #dae1e6;
+}
+.shop_bottom2 i{
+    font-size: 11px;
+    color:rgb(83, 81, 81);
+    border: 1px solid #dae1e6;
+    margin-top: 10px;
+    padding: 7px 10px 7px 10px;
+}
+#shop_bottom_p1 {
+    margin: 15px 0 10px 20px;
+    font-size: 13px;
+    font-weight: bold;
+}
+#shop_bottom_p2{
+    margin: 15px 20px 10px 4px;
+    font-size: 13px;
+    color: gray;
 }
 /*footer*/
 .f1 {
